Fixed spacing around component

--- a/dev/css/us/component/hp-contextual-links-us.css
+++ b/dev/css/us/component/hp-contextual-links-us.css
@@ -36,7 +36,7 @@
 
 @media screen and (min-width: 768px) {
     .more-content {
-        padding-top: 20px;
+        padding-top: 30px;
         padding-bottom: 20px;
     }
     .more-content__section a:nth-child(2) {
@@ -65,15 +65,12 @@
     }
 
     .more-content {
-        padding-top: 30px;
+        padding-top: 40px;
         padding-bottom: 40px;
     }
     .more-content__section a:nth-child(3) {
         font-size: 14px;
         line-height: 18px;
         letter-spacing: 1px;
-    }
-    .more-content__title {
-        line-height: 50px;
     }
 }
